# Graphics

./: .gitignore  test.cpp
hw0/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
hw1/: CMakeLists.txt  main.cpp
hw2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
hw3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
hw4/: CMakeLists.txt  main.cpp
hw5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
hw6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  Triangle.hpp
testwork1/: CMakeLists.txt  main.cpp
